--- a/app/src/main/res/layout/fragment_add_location.xml
+++ b/app/src/main/res/layout/fragment_add_location.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -9,8 +9,7 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/addLocation_viewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:background="@color/white" />
 
     <com.rd.PageIndicatorView
@@ -20,6 +19,9 @@
         android:layout_marginBottom="40dp"
         app:piv_selectedColor="@color/black"
         app:piv_unselectedColor="@color/gray"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
