--- a/app/src/main/res/layout/fragment_location_name.xml
+++ b/app/src/main/res/layout/fragment_location_name.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="40dp"
         android:backgroundTint="@color/black"
         android:hint="@string/location_name"
+        android:inputType="text"
         android:textColor="@color/black"
         android:textColorHint="@color/gray" />
 
