--- a/app/src/main/res/layout/fragment_trigger_details.xml
+++ b/app/src/main/res/layout/fragment_trigger_details.xml
@@ -42,7 +42,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/triggerDetails_humidity_til"
             style="@style/trigger_til_style"
-            android:hint="@string/humidity"
+            android:hint="@string/humidity_detail"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -69,15 +69,56 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/triggerDetails_dateStart_til"
+            style="@style/trigger_til_style"
+            android:hint="@string/date_start"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/triggerDetails_dateStart_et"
+                style="@style/trigger_et_style"
+                android:inputType="date" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/triggerDetails_dateEnd_til"
+            style="@style/trigger_til_style"
+            android:hint="@string/date_end"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/triggerDetails_dateEnd_et"
+                style="@style/trigger_et_style"
+                android:inputType="date" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/triggerDetails_save_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
             android:background="@color/black"
             android:text="@string/save"
+            android:textColor="@color/white" />
+
+      <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/triggerDetails_delete_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="15dp"
+            android:background="@color/black"
+            android:text="@string/delete"
             android:textColor="@color/white" />
 
     </LinearLayout>
