--- a/app/src/main/res/layout/item_trigger.xml
+++ b/app/src/main/res/layout/item_trigger.xml
@@ -8,6 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
