--- a/app/src/main/res/layout/fragment_trigger_details.xml
+++ b/app/src/main/res/layout/fragment_trigger_details.xml
@@ -39,10 +39,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/triggerDetails_name_til"
                 style="@style/trigger_til_style"
-                android:hint="@string/trigger_name"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:hint="@string/trigger_name">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/triggerDetails_name_et"
@@ -52,12 +49,23 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/triggerDetails_location_til"
+                style="@style/trigger_til_style"
+                android:hint="@string/location_name_detail">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/triggerDetails_location_et"
+                    style="@style/trigger_et_style"
+                    android:clickable="true"
+                    android:focusable="false"
+                    android:inputType="text" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/triggerDetails_temp_til"
                 style="@style/trigger_til_style"
-                android:hint="@string/temp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:hint="@string/temp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/triggerDetails_temp_et"
@@ -69,10 +77,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/triggerDetails_humidity_til"
                 style="@style/trigger_til_style"
-                android:hint="@string/humidity_detail"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:hint="@string/humidity_detail">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/triggerDetails_humidity_et"
@@ -84,10 +89,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/triggerDetails_wind_til"
                 style="@style/trigger_til_style"
-                android:hint="@string/wind_speed"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:hint="@string/wind_speed">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/triggerDetails_wind_et"
@@ -99,10 +101,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/triggerDetails_dateStart_til"
                 style="@style/trigger_til_style"
-                android:hint="@string/date_start"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:hint="@string/date_start">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/triggerDetails_dateStart_et"
@@ -114,10 +113,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/triggerDetails_dateEnd_til"
                 style="@style/trigger_til_style"
-                android:hint="@string/date_end"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:hint="@string/date_end">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/triggerDetails_dateEnd_et"
@@ -150,6 +146,5 @@
                 android:textColor="@color/white" />
 
         </LinearLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
