--- a/app/src/main/res/layout/fragment_triggers.xml
+++ b/app/src/main/res/layout/fragment_triggers.xml
@@ -20,7 +20,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4" />
+        android:visibility="gone"
+        app:layout_constraintVertical_bias="0.4"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/triggers_rv"
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_30dp"
         android:layout_marginEnd="@dimen/margin_30dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
